# pytest-jupyterhub

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  setup.py
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: release.yaml  release.yml  test.yaml  test.yml
docs/: requirements.txt
docs/source/: changelog.md  conf.py  fixtures.md  index.md  jupyterhub_spawners.md
docs/source/api/: index.md  jupyterhub_spawners.md
docs/source/contributing/: docs.md  index.md  setup.md  tests.md
docs/source/plugins/: index.md
jupyterhub-pytest-plugin/: _version.py
pytest_jupyterhub/: __init__.py  _version.py  jupyterhub_spawners.py
tests/: conftest.py  test_jupyterhub_spawners.py  test_jupyterhub_spawners_modified.py
