# build-system
# - ref: https://peps.python.org/pep-0517/
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# project
# - ref 1: https://peps.python.org/pep-0621/
# - ref 2: https://hatch.pypa.io/latest/config/metadata/#project-metadata
#
[project]
name = "pytest-jupyterhub"
description = "A reusable JupyterHub pytest plugin"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["jupyterhub", "pytest", "plugin"]
authors = [
    {name = "Jupyter Contributors", email = "jupyter@googlegroups.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Framework :: Pytest"
]
# Lists the packages and pins them to a version that your project depends on
dependencies = [
    # NOTE: If lower bounds are updated, also update our test for the lower
    #       bounds in .github/workflows/test.yaml.
    "jupyterhub>=2.0.0",
    "pytest",
    "pytest-asyncio",
    "jupyter_server"
]
dynamic = ["version"]

# Lists the packages and pins them to a version that the tests in your project depend on
[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.3"
]

[project.urls]
Documentation = "https://pytest-jupyterhub.readthedocs.io"
Source = "https://github.com/jupyterhub/pytest-jupyterhub"
Issues = "https://github.com/jupyterhub/pytest-jupyterhub/issues"

# hatch ref: https://hatch.pypa.io/latest/
#
[tool.hatch.version]
path = "pytest_jupyterhub/_version.py"


# autoflake is used for autoformatting Python code
#
# ref: https://github.com/PyCQA/autoflake#readme
#
[tool.autoflake]
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true


# black is used for autoformatting Python code
#
# ref: https://black.readthedocs.io/en/stable/
#
[tool.black]
skip-string-normalization = true
# target-version should be all supported versions, see
# https://github.com/psf/black/issues/751#issuecomment-473066811
target_version = [
    "py38",
    "py39",
    "py310",
    "py311",
]


# isort is used for autoformatting Python code
#
# ref: https://pycqa.github.io/isort/
#
[tool.isort]
profile = "black"


# pytest is used for running Python based tests
#
# ref: https://docs.pytest.org/en/stable/
#
[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10"
asyncio_mode = "auto"
# Ignore thousands of tests in dependencies installed in a virtual environment
norecursedirs = "lib lib64"


# tbump is used to simplify and standardize the release process when updating
# the version, making a git commit and tag, and pushing changes.
#
# ref: https://github.com/your-tools/tbump#readme
#
[tool.tbump]
github_url = "https://github.com/jupyterhub/pytest-jupyterhub"

[tool.tbump.version]
current = "0.1.0"
regex = '''
    (?P<major>\d+)
    \.
    (?P<minor>\d+)
    \.
    (?P<patch>\d+)
    (?P<pre>((a|b|rc)\d+)|)
    \.?
    (?P<dev>(?<=\.)dev\d*|)
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "pytest_jupyterhub/_version.py"

# specify project entrypoints to make each plugin discoverable by pytest
# ref: https://docs.pytest.org/en/latest/how-to/writing_plugins.html#making-your-plugin-installable-by-others
[project.entry-points.pytest11]
jupyterhub-spawners-plugin = "pytest_jupyterhub.jupyterhub_spawners"
